--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ a:focus {
 
 .padding-bloc-triple {
     padding-top: 60px;
-    padding-bottom: 60px
+    /*padding-bottom: 60px*/
 }
 
 .margin-btm-small {
