--- a/css/style.css
+++ b/css/style.css
@@ -366,6 +366,7 @@ h2 {
     padding-top: 30px;
     padding-bottom: 30px;
     color: #23468C;
+    font-size: 18px;
     font-weight: 600;
     text-shadow: none;
     transition: color 0.1s ease-in-out 0s
