--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@ a:focus {
     font-size: 20px;
     line-height: 36px;
     color: #fff;
-    background-color: #23468C;
+    background-color: #8C0303;
     cursor: pointer;
     z-index: 300;
     -webkit-transition: background-color 0.2s ease-in-out 0s;
@@ -169,9 +169,9 @@ a:focus {
     transition: background-color 0.2s ease-in-out 0s
 }
 
-.scroll-to-top:hover {
-    background-color: #8C0303
-}
+/*.scroll-to-top:hover {
+    background-color: #8C0303;
+}*/
 
 .cookies-privacy {
     background-color: rgba(50, 50, 50, .95);
