--- a/css/style.css
+++ b/css/style.css
@@ -299,8 +299,10 @@ h2 {
 }
 
 .orange-btn {
+    margin-top: 5px;
     background-color: #8C0303;
-    font-weight: 700
+    font-weight: 700;
+    border-radius: 5px;
 }
 
 .orange-btn:hover,
@@ -349,6 +351,7 @@ h2 {
 }
 
 .navbar-brand {
+    margin-left: 15px;
     padding: 0;
     height: 80px
 }
@@ -452,6 +455,15 @@ h2 {
 
 .ul-footer a:hover {
     color: #8C0303
+}
+
+.home-pres {
+    background: #f8f9fa;
+    padding: 30px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    height: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .home-pres h1 {
@@ -564,7 +576,7 @@ h2 {
 .import-icon {
     font-size: 20px;
     padding: 0 10px;
-    color: #999;
+    color: #23468C;
     cursor: pointer
 }
 
@@ -663,6 +675,8 @@ h2 {
 .list-team-item-remove,
 .list-player-item-remove,
 .list-banned {
+    color: #8C0303;
+    font-size: 16px;
     cursor: pointer
 }
 
