--- a/css/style.css
+++ b/css/style.css
@@ -1139,7 +1139,7 @@ h2 {
 .contact-info h3, .contact-form h3 {
     color: #23468C;
     margin-bottom: 20px;
-    font-weight: 600;
+
 }
 
 .contact-info h3 i, .contact-form h3 i {
@@ -1217,6 +1217,7 @@ h2 {
 .contact-form button {
     background: #23468C;
     border: none;
+    border-radius: 4px;
     padding: 12px 25px;
     font-weight: 600;
     transition: all 0.3s ease;
@@ -1229,6 +1230,12 @@ h2 {
 
 .contact-form button i {
     margin-right: 8px;
+}
+
+.contact-info img {
+    width: 100px;
+    height: 100px;
+    margin: auto;
 }
 
 .mt-4 {
